# dio-luizalabs-back-end-com-python-fastapi

./: README.md  bank.db  pyproject.toml  requeriments.txt
alembic/: env.py
alembic/versions/: 5e06fe93b369_transações_volta_a_ser_guardado_como_.py  91573322fa10_add_initial_tables.py  ee8840a8bc67_updated_tables_to_int.py
src/: config.py  main.py  security.py
src/controllers/: account.py
src/models/: account.py  transaction.py
src/schemas/: account.py
src/services/: account.py  transaction.py
src/views/: account.py
