[project]
name = "dio-banco"
version = "0.1.0"
description = "A basic bank API usando FastAPI"
authors = [
    {name = "Natanael Torres Amendola",email = "ntorresamendola@gmail.com"}
]
license = "Apache 2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard] (>=0.48.0,<0.49.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "databases (>=0.9.0,<0.10.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "pyjwt[crypto] (>=2.13.0,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "alembic",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
